[b]Version 0.6.2[/b]:

(2008-08-07)
 * Added a time display to the floating control in the minigui.
 * The playlist and the volume slider don't send mouse events to their
   parents. Should fix bugs #1993291 and #2020003.
 * Avoid to resize the main window to the default size (400x300) when 
   playing an audio file.

(2008-08-06)
 * The find subtitles dialog is now a top level window, instead of a dialog.
 * Play the last item in the playlist if the "play previous" button is
   pressed and the current item is the first one. Fixes bug #2040473.
 * Added "play next" and "play previous" to the Play menu.

(2008-08-03)
 * A little reorganization in the General section in preferences and other
   minor changes in other sections.

(2008-07-28)
 * Now the default cache for local files is 2000 KB, and for audio CDs and VCDs 
   is 1000 KB.

(2008-07-26)
 * Added an option in Preferences->Performance to set the cache for VCDs.

(2008-07-25)
 * Added an option in Preferences->Performance to set the cache for
   audio CDs.

(2008-07-22)
 * (Windows) Added to the file associations section the playlist 
   extensions.
 
(2008-07-17)
 * Try to use alsa as default audio driver in linux.

(2008-07-16)
 * Fix: remember the last directory used when adding files to the 
   playlist. Fixes bug #2019139.

(2008-07-13)
 * Another fix for Qt 4.4. Dragging files to the playlist didn't work.
 * Added the Slovenian translation, by Janez Troha <janez.troha@gmail.com>.
 * Fix: mplayer crashed when trying to play audio files if the option to
   run mplayer in its own window was enabled. Now I hope this is fixed.
 
(2008-07-12)
 * Added a new option for command line: -sub. It specifies a subtitle file
   to be loaded for the first video. It requires at least a file to play
   in the command line, otherwise the option will be ignored.
 * Added a new option "Play files from start" in the playlist preferences.
   If enabled (the default) files in the playlist will begin to play from